@@ -336,7 +336,9 @@ var Option = Class("Option", {
         if (this.type === "string")
             defaultValue = Commands.quote(defaultValue);
 
-        if (isObject(defaultValue))
+        if (isArray(defaultValue))
+            defaultValue = defaultValue.map(Option.quote).join(",");
+        else if (isObject(defaultValue))
             defaultValue = iter(defaultValue).map(function (val) val.map(Option.quote).join(":")).join(",");
 
         if (isArray(defaultValue))
